# crowdmark-labeler

./: LICENSE  README.md  setup.cfg
clabeler/: __init__.py  command_line.py
example/: example.py  labels.txt  labels.xlsx
