[metadata]
name = clabeler
version = 1.0.1
author = Matthew Thomas
author_email = matthew.thomas@northwestern.edu
description = Label exam PDFs from Crowdmark with names of students
license = MIT License
platform = OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwt/crowdmark-labeler
project_urls =
    Bug Tracker = https://github.com/mwt/crowdmark-labeler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires = 
    pandas
    pdfrw
    reportlab

[options.entry_points]
console_scripts =
    clabeler = clabeler.command_line:main
